# demand-forecasting-m5

./: .gitignore  README.md  docker-compose.yaml  makefile
bi/: Dockerfile  pyproject.toml  requirements.txt
bi/src/: database.py  logger.py  main.py  models.py  repository.py  schema.py  service.py  table.py  tables.py  view.py
data/: calendar_demo.csv  create.sql
data_registration/: Dockerfile  pyproject.toml  requirements.txt
data_registration/src/: main.py
data_registration/src/domain/repository/: calendar_repository.py  prices_repository.py  sales_repository.py  tables_repository.py
data_registration/src/exceptions/: exceptions.py
data_registration/src/infrastructure/: database.py
data_registration/src/infrastructure/database/: db_client.py
data_registration/src/infrastructure/repository/: calendar_repository.py  prices_repository.py  sales_repository.py  tables_repository.py
data_registration/src/infrastructure/schema/: calendar_schema.py  models.py  prices_schema.py  sales_schema.py
data_registration/src/middleware/: strings.py
data_registration/src/model/: calendar_model.py  sales.py  table_model.py
data_registration/src/repository/: abstract_repository.py  calendar_repository.py  prices_repository.py  sales_repository.py  table_repository.py
data_registration/src/schema/: calendar_schema.py  prices_schema.py  sales_schema.py
data_registration/src/usecase/: data_register_usecase.py
machine_learning/: Dockerfile  pyproject.toml  requirements.txt
machine_learning/hydra/: default.yaml
machine_learning/src/: main.py
machine_learning/src/algorithm/: abstract_algorithm.py  abstract_model.py  lightgbm_regressor.py  models.py  preprocess.py
machine_learning/src/domain/: prediction_data.py  preprocessed_data.py
machine_learning/src/domain/algorithm/: lightgbm_regressor.py  models.py  preprocess.py
machine_learning/src/domain/model/: common_data.py  evaluation_data.py  prediction_data.py  preprocessed_data.py  raw_data.py
machine_learning/src/domain/repository/: calendar_repository.py  prediction_repository.py  prices_repository.py  sales_calendar_prices_repository.py  sales_calendar_repository.py  sales_repository.py
machine_learning/src/entity/: common_data.py  evaluation_data.py  prediction_data.py  preprocessed_data.py  training_data.py
machine_learning/src/infrastructure/: database.py
machine_learning/src/infrastructure/database/: db_client.py
machine_learning/src/infrastructure/repository/: calendar_repository.py  prediction_repository.py  prices_repository.py  sales_calendar_prices_repository.py  sales_calendar_repository.py  sales_repository.py
machine_learning/src/infrastructure/schema/: models.py  prediction_schema.py  sales_calendar_prices_schema.py  sales_calendar_schema.py
machine_learning/src/middleware/: logger.py
machine_learning/src/ml_algos/: preprocess.py
machine_learning/src/model/: prediction_model.py  prices_model.py  sales_calendar_model.py  table_model.py
machine_learning/src/repository/: abstract_repository.py  calendar_repository.py  prediction_repository.py  predictions_repository.py  prices_repository.py  sales_calendar_repository.py  sales_repository.py
machine_learning/src/schema/: calendar_schema.py  prediction_schema.py  prices_schema.py  sales_calendar_schema.py  sales_schema.py
machine_learning/src/usecase/: data_loader_usecase.py  evaluation_usecase.py  prediction_register_usecase.py  prediction_usecase.py  preprocess_usecase.py  training_usecase.py
mlflow/: Dockerfile  pyproject.toml  requirements.txt
notebook/: Dockerfile  demand_forecasting_m5.ipynb  demand_forecasting_m5_colab.ipynb  demand_forecasting_m5_jupyter.ipynb  requirements.txt
