[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^2.2.0"
plotly = "^5.18.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.1"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
