[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "^2.2.0"
plotly = "^5.18.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.1"
streamlit = "^1.31.0"
types-psycopg2 = "^2.9.21.20240417"
pandas-stubs = "^2.2.2.240603"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
