[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "2.2.0"
plotly = "5.23.0"
psycopg2-binary = "2.9.9"
pydantic = "2.8.2"
streamlit = "1.37.1"
types-psycopg2 = "2.9.21.20240417"
pandas-stubs = "2.2.2.240603"
sqlalchemy = "2.0.41"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.1"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
