[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
scikit-learn = "^1.4.0"
hydra-core = "^1.3.2"
mlflow = "^2.10.0"
pydantic = "^2.6.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
optuna = "^3.5.0"
lightgbm = "^4.3.0"
psycopg2-binary = "^2.9.9"
pandera = "^0.18.0"
pyyaml = "^6.0.1"
types-psycopg2 = "^2.9.21.20240417"
pandas-stubs = "^2.2.2.240603"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
