[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
scikit-learn = "1.5.1"
hydra-core = "1.3.2"
mlflow = "2.10.0"
pydantic = "2.8.2"
pandas = "2.2.2"
numpy = "1.26.4"
optuna = "3.6.1"
lightgbm = "4.5.0"
psycopg2-binary = "2.9.9"
pandera = "0.18.3"
pyyaml = "6.0.1"
types-psycopg2 = "2.9.21.20240417"
pandas-stubs = "2.2.2.240603"
types-pyyaml = "6.0.12.20240724"
sqlalchemy = "2.0.41"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.1"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lightgbm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "optuna.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mlflow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandera.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
